--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.13.2",
     "@hyperledger/fabric-gateway": "^1.7.1",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
@@ -20,9 +21,12 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.485.0",
     "next": "15.2.3",
-    "react": "^19.0.0",
+    "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
+    "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
+    "sonner": "^2.0.2",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.5"
   },
