--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hyperledger/fabric-gateway": "^1.7.1",
     "@radix-ui/react-checkbox": "^1.2.2",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-radio-group": "^1.3.3",
