--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -27,13 +27,19 @@
     "@radix-ui/react-tabs": "^1.1.11",
     "@react-pdf/renderer": "^4.3.0",
     "@tanstack/react-table": "^8.21.3",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "file-saver": "^2.0.5",
+    "jose": "^6.0.11",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.485.0",
+    "mongoose": "^8.14.2",
     "next": "15.2.3",
-    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
@@ -41,20 +47,23 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
     "react-pdf": "^9.2.1",
+    "resend": "^4.4.1",
     "sonner": "^2.0.3",
-    "tailwind-merge": "^3.0.2",
+    "tailwind-merge": "^3.3.0",
     "tw-animate-css": "^1.2.5",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie": "^1.0.0",
+    "@types/node": "^20.17.47",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
